(executables
 (names
  rounded_text
  wave_cylinder
  spiral
  rounded_linear_extrude
  rounded_polyhole_sweep
  helix_extrude
  bezier_path
  cartesian_gravity_well
  spline
  poly2d_to_scad
  rounded_prism_pointy
  arc_points_2d
  arc_points_3d
  polar_rose
  sweep_path
  offset_poly
  axial_chalice
  polyholes
  resampled_path
  sweep_starburst
  circular_rounding
  rounded_prism_tunnel
  helix_path_points)
 (libraries scad_ml))

; TODO: (?) make a tool that turns ml files (here, executables since odoc ignores them conveniently)
; into mld markup with code wrapped in blocks (and whatever doc comments interspersed). That way I don't
; have to worry about code not matching the versions pased into the docs.

; Convenience rule/alias for building and running examples (promoted to examples/scads diectory)
; This pattern enables automatic scad re-generation on changes with `dune build -w @run`.

(rule
 (alias examples)
 (deps
  (sandbox always)
  (:runner "helpers/runner.exe")
  (:scads
   (glob_files "*.exe")))
 (targets
  (dir "scads"))
 (mode
  (promote (until-clean)))
 (action
  (chdir
   "scads"
   (run %{runner} %{scads}))))

; Export scad examples to stl.

(rule
 (alias export_examples)
 (deps
  (sandbox always)
  (:exporter "helpers/exporter.exe")
  (:scads
   (glob_files "scads/*.scad")))
 (targets
  (dir "stls"))
 (mode
  (promote (until-clean)))
 (action
  (chdir
   "stls"
   (run %{exporter} %{scads}))))

; Export scad examples to png.

(rule
 (alias snap_examples)
 (deps
  (sandbox always)
  (:exporter "helpers/snapper.exe")
  (:scads
   (glob_files "scads/*.scad")))
 (targets
  (dir "pngs"))
 (mode
  (promote (until-clean)))
 (action
  (chdir
   "pngs"
   (run %{exporter} %{scads}))))

(rule
 (alias doc)
 (deps
  (:copier "../docs/copier.exe")
  (:img
   (glob_files pngs/*.png)))
 (action
  (run %{copier} "../_doc/_html/assets" %{img})))

(rule
 (alias examples)
 (deps
  (sandbox always)
  (:doccer "helpers/doccer.exe")
  (:ml
   (glob_files "*.ml")))
 (targets
  (dir "docs"))
 ; (mode
 ;  (promote
 ;   (until-clean)
 ;   (into "../docs/examples")))
 (mode
  (promote (until-clean)))
 (action
  (chdir
   "docs"
   (run %{doccer} %{ml}))))

; (action
;  (run %{doccer} %{ml})))
